--- a/src/frontend/css/general/sidebar.css
+++ b/src/frontend/css/general/sidebar.css
@@ -35,7 +35,7 @@
     color: var(--sidebar-text);
     margin-left: 2px;
     font-size: 25px;
-    font-weight: 600;
+    letter-spacing: 2px;
     font-family: sans-serif;
 }
 
@@ -52,7 +52,7 @@
     display: flex;
     align-items: center;
     margin: 10px 0;
-    border-radius: 50px;
+    border-radius: 10px;
     width: 100%;
     height: 35px;
     font-weight: 600;
