--- a/src/frontend/css/views/taskboard/taskboardView.css
+++ b/src/frontend/css/views/taskboard/taskboardView.css
@@ -32,7 +32,7 @@
     display: grid;
     grid-template-rows: 40px 1fr;
     row-gap: 20px;
-    margin: 0 auto;
+    margin-bottom: 50px;
     width: 100%;
     max-width: 100%;
 }
