--- a/src/frontend/css/general/scrollbar.css
+++ b/src/frontend/css/general/scrollbar.css
@@ -1,6 +1,7 @@
 .searchbar ul::-webkit-scrollbar,
 .linkable-notes-list::-webkit-scrollbar,
 .content-view::-webkit-scrollbar,
+.note-view-content::-webkit-scrollbar,
 .font-options::-webkit-scrollbar,
 .linkable-notes-list::-webkit-scrollbar,
 .flashcard-deck-container::-webkit-scrollbar,
@@ -34,6 +35,7 @@
 .flashcard-deck-container::-webkit-scrollbar-thumb,
 .flashcard-deck-progression-container::-webkit-scrollbar-thumb,
 .content-view::-webkit-scrollbar-thumb,
+.note-view-content::-webkit-scrollbar-thumb,
 .editor::-webkit-scrollbar-thumb,
 .home .middle::-webkit-scrollbar-thumb,
 .templates::-webkit-scrollbar-thumb,
