--- a/src/frontend/css/components/entities/note.css
+++ b/src/frontend/css/components/entities/note.css
@@ -1,110 +1,61 @@
-.note {
+note-card,
+recent-note-card,
+template-card {
     cursor: pointer;
     min-height: 280px;
     max-height: 280px;
     border-radius: 15px;
     background-color: var(--card);
     display: grid;
-    grid-template-rows: 40px 1fr 50px;
+    grid-template-rows: 40px 1fr;
     margin: 20px;
     overflow: visible;
-    /* border: 1px solid var(--border-card); */
     opacity: 0;
     transform: translateY(30%);
     transition: opacity .7s ease, transform .25s ease, scale .2s ease;
     box-shadow: var(--card-shadow);
 }
 
-.note:hover {
+note-card:hover,
+recent-note-card:hover,
+template-card:hover {
     scale: 1.05;
 }
 
-.bookmark {
-    background-color: var(--bookmark);
+note-card .bookmark {
+    background-color: var(--bookmark) !important;
 }
 
-.favorite {
-    background-color: var(--favorite);
-    border-color: var(--favorite);
-}
-
-.note-name-box {
-    cursor: auto;
-    display: flex;
-    align-items: center;
-    position: relative;
-    overflow: visible;
-}
-
-.note-name-box h4 {
-    width: 100%;
+note-card h4,
+recent-note-card h4,
+template-card h4 {
     padding: 5px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: auto 10px;
     color: var(--important);
     font-family: sans-serif;
     font-size: 15px;
 }
 
-.note-content-box {
+note-card .note-content-box,
+recent-note-card .note-content-box,
+template-card .note-content-box {
     padding: 10px;
     font-weight: 600;
     overflow: hidden;
     color: var(--text);
-}
-
-.note-util-bar{
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    padding-right: 10px;
-    gap: 5px;
-    opacity: 0;
-    transition: .2s;
-    cursor: auto;
-}
-
-.note-util-bar:hover {opacity: 1}
-
-.note-util-bar i {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     cursor: pointer;
-    width: 30px;
-    height: 30px;
-    border-radius: 10px;
-    color: var(--icon);
-}
-
-.note-util-bar i:hover {
-    background-color: var(--hover);
-    color: var(--icon-hover);  
-}
-
-.bookmark #bookmark-note-btn,
-.bookmark .note-util-bar i:hover {
-    background-color: var(--hover-bookmark-icon-if-bookmarked);
-    color: var(--icon-hover);
-}
-
-.favorite #favorite-note-btn,
-.favorite .note-util-bar i:hover {
-    background-color: var(--hover-favorite-icon-if-favorited);
-    color: var(--icon-hover);
-}
-
-.note-content-box p {
     font-size: 9px;
-    cursor: pointer;
 }
 
-.note-content-box img {
+
+note-card .note-content-box img,
+recent-note-card .note-content-box img,
+template-card .note-content-box img {
     max-width: 150px;
     border-radius: 5px;
 }
 
-.note-content-box i {
+note-card .note-content-box i {
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -114,23 +65,28 @@
     color: var(--text);
 }
 
-.note-content-box iframe {visibility: hidden}
+note-card .note-content-box iframe,
+recent-note-card .note-content-box iframe {visibility: hidden}
 
-.note-content-box hr {
+note-card .note-content-box hr,
+recent-note-card .note-content-box hr {
     border-style: none;
     border-radius: 5px;
     border: 1px solid var(--editor-text);
   }
 
- .note-content-box h1,
- .note-content-box h2 {
+note-card .note-content-box :where(h1, h2),
+recent-note-card .note-content-box :where(h1, h2) {
     color: var(--important);
     font-weight: 600;
     font-size: 12px
 }
-.note-content-box h1 {
+
+note-card .note-content-box h1,
+recent-note-card .note-content-box h1{
     font-size: 14px;
     font-weight: 600;
 }
-.note-content-box .linked-note-container {visibility: hidden}
-.note-content-box a {color: rgb(67, 142, 255)}
+
+note-card .note-content-box .linked-note-container {visibility: hidden}
+note-card .note-content-box a {color: rgb(67, 142, 255)}
