--- a/src/frontend/css/general/main.css
+++ b/src/frontend/css/general/main.css
@@ -88,6 +88,14 @@ i {
     color: var(--important);
 }
 
+.block-title {
+    font-family: sans-serif;
+    color: var(--subtitle);
+    margin-top: 20px;
+    font-size: 20px;
+    padding: 20px 0;
+}
+
 .subtitle {
     font-weight: 500;
     color: var(--important);
@@ -157,4 +165,41 @@ textarea::placeholder {
 .dropdown-items li:hover {
     background-color: var(--hover-searchbar-options);
     color: var(--hover-text);
+}
+
+
+.options-menu {
+    position: absolute;
+    top: -80px;
+    right: 5px;
+    background-color: var(--options-menu);
+    width: fit-content;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.options-menu div {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+    transition: 200ms;
+}
+
+.options-menu div:hover {
+    background-color: var(--hover);
+    color: var(--hover-text);
+}
+
+.options-menu i {
+    font-size: 14px;
+}
+
+.options-menu span {
+    font-size: 14px;
+    font-family: Roboto;
+    margin-left: 5px;
+    font-weight: 600;
 }
