--- a/src/frontend/css/views/note/notesView.css
+++ b/src/frontend/css/views/note/notesView.css
@@ -1,4 +1,4 @@
-.notes {
+.notes-view {
     outline: none;
     height: 100dvh;
     max-height: 100dvh;
@@ -12,9 +12,9 @@
 }
 
 .notes-top {
-    position: relative;;
+    position: relative;
     display: flex;
-    justify-content: right;
+    justify-content: center;
     align-items: center;
     gap: 10px;
 }
@@ -43,26 +43,11 @@
     width: 100%;
 }
 
-.exit-folder-btn {
-    position: absolute;
-    top: 10px;
-    left: 5px;
-    font-size: 25px;
-    background-color: transparent;
-    color: var(--important);
-    padding: 10px 15px;
-    border-radius: 15px;
-}
-
-.exit-folder-btn:hover {
-    background-color: var(--exit-btn);
-}
-
 .current-folder-name-container {
     display: block;
     align-items: center;
-    padding: 5px 10px;
-    margin: 15px 10px 15px 10px;
+    padding: 5px 0;
+    margin: 15px 0;
     color: var(--text);
 }
 
@@ -79,18 +64,26 @@
     color: var(--text)
 }
 
-.content-folder-view {
-    position: relative;
+.folders {
+    max-width: 100%;
+    padding: 0 15px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-rows: repeat(auto-fill, 50px);
+    gap: 20px;
 }
 
-.content-view {
+.note-view-content {
+    height: calc(100dvh - 220px);
+    max-height: calc(100dvh - 220px);
+    overflow-y: scroll;
+}
+
+.notes {
     outline: none;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-template-rows: repeat(auto-fill, 320px);
-    height: calc(100dvh - 220px);
-    max-height: calc(100dvh - 220px);
-    overflow-y: scroll;
     padding-bottom: 5%;
 }
 
