--- a/src/frontend/css/general/sidebar.css
+++ b/src/frontend/css/general/sidebar.css
@@ -27,7 +27,6 @@
     border-radius: 18px 12px 18px 12px;
     color: #fff;
     font-size: 18px;    
-    font-family: sans-serif;
     background-color: var(--secondary);
 }
 
@@ -36,7 +35,6 @@
     margin-left: 2px;
     font-size: 25px;
     letter-spacing: 2px;
-    font-family: sans-serif;
 }
 
 .sidebar-content {
@@ -54,16 +52,11 @@
     margin: 10px 0;
     border-radius: 10px;
     width: 100%;
-    height: 35px;
-    font-weight: 600;
+    height: 45px;
     background-color: transparent;
     color: var(--sidebar-text);
     font-family: Roboto;
     transition: .2s;
-}
-
-.sidebar-content #home-btn {
-    background-color: var(--home-tab);
 }
 
 .sidebar-content a span {
@@ -82,9 +75,9 @@
     color: var(--sidebar-text-hover);
 }
 
-.active-view {
-    background-color: #5c7fdd !important;
-    color: #fff !important;
+.active-tab {
+    background-color: var(--hover-sidebar) !important;
+    color: var(--sidebar-text-hover) !important;
 }
 
 .soft {
