--- a/src/frontend/css/components/entities/flashcard.css
+++ b/src/frontend/css/components/entities/flashcard.css
@@ -1,7 +1,7 @@
 flashcard-deck {
     display: grid;
     grid-template-rows: 50px 1fr 50px;
-    box-shadow: var(--card-shadow);
+    box-shadow: var(--shadow-card);
     background-color: var(--card);
     height: 205px;
     padding: 10px 20px;
@@ -13,7 +13,7 @@ flashcard-deck {
 
 flashcard-deck:hover {
     scale: 1.05;
-    box-shadow: var(--card-shadow);
+    box-shadow: var(--shadow-card);
 }
 
 flashcard-deck .deck-name {
