--- a/src/frontend/css/components/entities/folder.css
+++ b/src/frontend/css/components/entities/folder.css
@@ -7,7 +7,7 @@ folder-card {
     background-color: var(--card);
     border-radius: 10px;
     color: var(--icon);
-    box-shadow: var(--card-shadow);
+    box-shadow: var(--shadow-card);
     opacity: 0;
     transform: translateY(30%);
     transition: opacity .7s ease, transform .25s ease, scale .2s ease;
@@ -40,7 +40,7 @@ recent-folder-card {
     background-color: var(--card);
     border-radius: 10px;
     color: var(--icon);
-    box-shadow: var(--card-shadow);
+    box-shadow: var(--shadow-card);
     opacity: 0;
     transform: translateY(30%);
     transition: opacity .7s ease, transform .25s ease, scale .2s ease;
