--- a/src/frontend/css/views/note/notesView.css
+++ b/src/frontend/css/views/note/notesView.css
@@ -24,36 +24,26 @@
     height: 35px;
     font-size: 20px;
     color: var(--text);
-    background-color:transparent; 
+    border-radius: 10px;
+    background-color: transparent; 
 }
 
-.current-folder-name-container button::before {
-    position: absolute;
-    content: '';
-    bottom: 0;
-    left: 0;
-    height: 2px;
-    width: 0;
-    background-color: #5c7fdd;
-    transition: .3s;
+.current-folder-name-container button:hover {
+    background-color: var(--hover-button);
 }
 
-.current-folder-name-container button:hover::before {
-    width: 100%;
-}
 
 .current-folder-name-container {
-    display: block;
+    display: flex;
+    column-gap: 10px;
     align-items: center;
     padding: 5px 0;
     margin: 15px 0;
     color: var(--text);
 }
 
-.current-folder-name-container div {
-    display: flex;
-    column-gap: 10px;
-    padding-top: 10px;
+.note-view-options-dropdown {
+    position: relative;
 }
 
 .current-folder-name-container h1 {
