--- a/src/frontend/css/general/themes.css
+++ b/src/frontend/css/general/themes.css
@@ -11,7 +11,7 @@
     --editor-container-input: #16171c;
     --editor-dropdown: #12121d;
     --dropdown: #12121d;
-
+    --heading3: #9da0bd;
     --hover-slash-command: #16171c;
     --file-path: #9095aa;
 
@@ -115,7 +115,7 @@
     --editor-container-shadow: #272933;
     --editor-container-input: #f6f7ff;
     --dropdown: #ffffff;
-
+    --heading3: #707391;
     --editor-dropdown: #ffffff;
 
     --toolbar-btn-text: #4f578f;
