--- a/src/frontend/css/notification/notification.css
+++ b/src/frontend/css/notification/notification.css
@@ -9,7 +9,7 @@ push-notification {
     border-radius: 10px;
     padding: 20px;
     cursor: pointer;
-    transition: 150ms;
+    transition: opacity .7s ease, transform .25s ease, scale .2s ease;
 }
 
 push-notification:hover {
@@ -43,4 +43,125 @@ push-notification .notitication-message {
 
 .show-push-notification {
     bottom: 50px !important;
+}
+
+
+
+
+empty-notification {
+    height: 400px;
+    display: grid;
+    opacity: 0;
+    transform: translateY(30%);
+    transition: opacity .7s ease, transform .25s ease, scale .2s ease;
+    grid-template-rows: 1fr 100px 70px;
+}
+
+empty-notification .icons {
+    width: 400px;
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+empty-notification #floating-icon1,
+empty-notification #floating-icon2,
+empty-notification #floating-icon3,
+empty-notification #floating-icon4 {
+    position: absolute;
+    background-color: var(--hover-sidebar);
+    color: #7e8392;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 10px var(--shadow);
+    animation: bobbing 1.5s ease-in-out infinite;
+}
+
+empty-notification #floating-icon1 {
+    width: 35px;
+    height: 35px;
+    font-size: 23px;
+    top: 20px;
+    left: 50px;
+    animation-delay: .5s;
+}
+
+empty-notification #floating-icon2 {
+    font-size: 20px;
+    bottom: 25px;
+    right: 55px;
+    width: 30px;
+    height: 30px;
+    animation-delay: .75s;
+}
+
+empty-notification #floating-icon3 {
+    bottom: 55px;
+    left: 75px;
+    font-size: 17px;
+    width: 25px;
+    height: 25px;
+    animation-delay: .25s;
+}
+
+empty-notification #floating-icon4 {
+    top: 30px;
+    right: 75px;
+    width: 25px;
+    height: 25px;
+    font-size: 15px;
+    animation-delay: 1s;
+}
+
+empty-notification #center-icon {
+    font-size: 56px;
+    color: var(--text)
+}
+
+empty-notification .empty-message {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+empty-notification p {
+    font-size: 25px;
+    margin: 5px 0;
+    font-weight: 600;
+    color: var(--text);
+}
+
+empty-notification span {
+    max-width: 400px;
+    text-align: center;
+    color: var(--placeholder);
+}
+
+empty-notification .emtpy-message-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 25px;
+}
+
+.emtpy-message-buttons button {
+    border: none;
+    background-color: #5c7fdd;
+    padding: 10px;
+    border-radius: 10px;
+    color: #fff;
+    transition: .2s;
+}
+
+.emtpy-message-buttons button:hover {
+    background-color: #466edb;
+}
+
+.emtpy-message-buttons .empty-create-folder-btn {
+    background-color: var(--text);
 }
