--- a/src/frontend/css/textEditor/editorSpawnables.css
+++ b/src/frontend/css/textEditor/editorSpawnables.css
@@ -66,7 +66,6 @@
     cursor: pointer;
     border-radius: 7px;
     color: var(--text);
-    
     width: 30px;
     height: 30px;
 }
@@ -129,9 +128,9 @@
     border-radius: 5px;
     padding: 5px 10px;
     display: grid;
+    font-size: 14px;
     grid-template-columns: 40px 1fr;
     color: var(--editor-text);
-    
     transition: 50ms;
 }
 
@@ -141,6 +140,7 @@
 
 .foreward-slash-command-container i {
     display: flex;
+    font-size: 19px;
     justify-content: center;
     align-items: center;
     min-height: 30px;
