empty folder message is a feature  now

--- a/src/frontend/css/notification/notification.css
+++ b/src/frontend/css/notification/notification.css
@@ -9,7 +9,7 @@ push-notification {
     border-radius: 10px;
     padding: 20px;
     cursor: pointer;
-    transition: opacity .7s ease, transform .25s ease, scale .2s ease;
+    transition: .2s
 }
 
 push-notification:hover {
