--- a/src/frontend/css/views/template/templatesView.css
+++ b/src/frontend/css/views/template/templatesView.css
@@ -20,14 +20,13 @@
 }
 
 .templates .stats-section p {
-    font-weight: 600;
+    font-weight: 400;
     font-size: 20px;
     color: var(--important);
 }
 
 .templates .stats-section p span {
     font-size: 25px;
-    
     color: var(--stats-span-color);
 }
 
@@ -59,6 +58,7 @@
     height: 100%;
     background-color: var(--hover);
     transition: .2s;
+    z-index: -1;
 }
 
 .add-template-btn:hover::before {
