--- a/src/frontend/css/modals/noteDetailsModal.css
+++ b/src/frontend/css/modals/noteDetailsModal.css
@@ -3,8 +3,8 @@
     display: flex;
     flex-direction: column;
     padding: 10px 40px;
-    width: 450px;
-    height: 400px;
+    width: 550px;
+    height: 450px;
     background-color: var(--modal);
     border-radius: 25px;
     box-shadow: 0 0 10px var(--shadow);
@@ -28,7 +28,7 @@
 }
 
 .note-details-modal .property {
-    color: #c4c6da;
+    color: #abadc4;
     font-weight: 600;
 }
 
