--- a/src/frontend/css/views/settingsView.css
+++ b/src/frontend/css/views/settingsView.css
@@ -1,8 +1,7 @@
 .settings {
     display: flex;
-    justify-content: center;
-    font-family: Roboto;
-    padding: 15px;   
+    flex-direction: column;
+    padding: 0 5%;   
     height: calc(100dvh - 37px);
     max-height: calc(100dvh - 37px);
     opacity: 0;
@@ -10,20 +9,19 @@
     transition: opacity .7s ease, transform .2s ease;
 }
 
-.settings .center {
-    width: 50%;
-}
 
 .settings-container {
-    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    column-gap: 20px;
 }
 
 
 .settings-container h3 {
-    font-size: 27px;
+    font-size: 20px;
     margin-top: 25px;
+    font-weight: 500;
     margin-bottom: 5px;
-    
     color: var(--important);
 }
 
@@ -34,22 +32,21 @@
 }
 
 .theme-dropdown,
-.sidebar-color-dropdown {
+.sidebar-color-dropdown,
+.widget-style-dropdown {
     position: relative;
     border-radius: 5px;
     background-color: var(--setting-dropdown);
-    width: 350px;
 }
 
 
 .theme-dropdown input,
-.sidebar-color-dropdown input {
+.sidebar-color-dropdown input,
+.widget-style-dropdown input {
     background-color: transparent;
     border: none;
     width: 100%;
     color: var(--text);
     padding: 10px;
-    font-size: 18px;
-    font-family: Roboto;
-    font-weight: 600;
+    font-size: 16px;
 }
